environments/developer-build/patches/rolling-update-one-node.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: placeholder
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
