environments/developer-build/patches/storefront-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storefront-ui
spec:
  template:
    spec:
      containers:
        - name: storefront-ui
