environments/developer-build/patches/use-dev-infra-backoffice-bff.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backoffice-bff
spec:
  template:
    spec:
      containers:
        - name: backoffice-bff
