environments/developer-build/patches/use-dev-infra-cart.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart
spec:
  template:
    spec:
      containers:
        - name: cart
