environments/developer-build/patches/use-dev-infra-customer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer
spec:
  template:
    spec:
      containers:
        - name: customer
