environments/developer-build/patches/use-dev-infra-inventory.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory
spec:
  template:
    spec:
      containers:
        - name: inventory
