environments/developer-build/patches/use-dev-infra-location.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: location
spec:
  template:
    spec:
      containers:
        - name: location
