environments/developer-build/patches/use-dev-infra-media.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media
spec:
  template:
    spec:
      containers:
        - name: media
