environments/developer-build/patches/use-dev-infra-order.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
spec:
  template:
    spec:
      containers:
        - name: order
