environments/developer-build/patches/use-dev-infra-payment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
spec:
  template:
    spec:
      containers:
        - name: payment
