environments/developer-build/patches/use-dev-infra-product.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product
spec:
  template:
    spec:
      containers:
        - name: product
