environments/developer-build/patches/use-dev-infra-sampledata.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sampledata
spec:
  template:
    spec:
      containers:
        - name: sampledata
