environments/developer-build/patches/use-dev-infra-search.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search
spec:
  template:
    spec:
      containers:
        - name: search
