environments/developer-build/patches/use-dev-infra-storefront-bff.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storefront-bff
spec:
  template:
    spec:
      containers:
        - name: storefront-bff
