environments/developer-build/patches/use-dev-infra-tax.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tax
spec:
  template:
    spec:
      containers:
        - name: tax
