environments/developer-build/patches/static-storefront-bff-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: storefront-bff
spec:
  ports:
    - port: 8087
      targetPort: 8087
      protocol: TCP
      nodePort: 31096
