environments/developer-build/patches/virtualservice-hosts.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: yas-ingress-vs
spec:
  hosts:
    - storefront.developer-build.yas.local.com
